--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,7 @@
     verbose="true"
 >
     <testsuites>
-        <testsuite name="Bitcoin API Test Suite">
+        <testsuite name="DeVault API Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
